<?xml version="1.0" encoding="utf-8"?>

<com.google.android.flexbox.FlexboxLayout
    android:id="@+id/flexbox"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:justifyContent="space_between"
    app:flexWrap="wrap">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="start">
        <ImageView
            android:src="@drawable/menu_umroh"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="8dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/umroh"
            android:textAlignment="center" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="start">
        <ImageView
            android:src="@drawable/menu_zakat"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="8dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/zakat_infaq"
            android:textAlignment="center" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="start">
        <ImageView
            android:src="@drawable/menu_wakaf"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="8dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wakaf_uang"
            android:textAlignment="center" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="start">
        <ImageView
            android:src="@drawable/menu_donasi"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="8dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/donasi"
            android:textAlignment="center" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="start">
        <ImageView
            android:src="@drawable/menu_jadwal"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="8dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/jadwal_shalat"
            android:textAlignment="center" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="start">
        <ImageView
            android:src="@drawable/menu_kiblat"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="8dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/arah_kiblat"
            android:textAlignment="center" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="start">
        <ImageView
            android:src="@drawable/menu_tiket"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="8dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/event"
            android:textAlignment="center" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="start">
<!--        <com.yinglan.shadowimageview.ShadowImageView-->
<!--            app:shadowSrc="@drawable/menu_qurban"-->
<!--            app:shadowRound="@dimen/dp_20"-->
<!--            app:shadowColor="@color/grey"-->
<!--            android:layout_width="50dp"-->
<!--            android:layout_height="50dp"-->
<!--            android:layout_marginHorizontal="16dp"-->
<!--            android:layout_marginVertical="8dp" />-->
        <ImageView
            android:src="@drawable/menu_qurban"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="8dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:text="@string/qurban_aqiqah"
            android:textAlignment="center" />
    </LinearLayout>
</com.google.android.flexbox.FlexboxLayout>
